--- a/contato.html
+++ b/contato.html
@@ -1,38 +1,58 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Entre em Contato</title>
-  <link rel="stylesheet" href="style.css"/>
-</head>
-<body>
-  <main class="container">
-    <h1>Fale Conosco</h1>
-    <form action="enviar-contato.php" method="POST" class="contact-form">
-      <div class="field">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" name="nome" required maxlength="100"/>
-      </div>
-      <div class="field">
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" required maxlength="100"/>
-      </div>
-      <div class="field">
-        <label for="assunto">Assunto:</label>
-        <input type="text" id="assunto" name="assunto" required maxlength="120"/>
-      </div>
-      <div class="field">
-        <label for="mensagem">Mensagem:</label>
-        <textarea id="mensagem" name="mensagem" required rows="6" maxlength="1000"></textarea>
-      </div>
-      <!-- Você pode descomentar e configurar o reCAPTCHA se quiser -->
-      <!-- <div class="field">
-        <div class="g-recaptcha" data-sitekey="SEU_SITE_KEY"></div>
-      </div> -->
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+        <title>Festejando: do campo à cidade</title>
+        <link rel="stylesheet" href="stylescontato.css" />
+      </head>
+      <body>
+        <header>
+          <div class="container">
+            <h1>Festejando: do campo à cidade</h1>
+           <nav>
+              <ul>
+                  <li><a href="index.html">Início</a></li>
+                  <li><a href="cultura.html">História</a></li>
+                  <li><a href="galeria.html">Galeria</a></li>
+                  <li><a href="receitas.html">Receitas</a></li>
+                  <li><a href="obrigado.html">Receitas</a></li>
+                  <li><a href="musica.html">Música</a></li>
+                  <li><a href="sobre.html">Sobre</a></li>
+                  <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+          </div>
+        </header>
+  <br><br>
+
+  <section>
+    <h2>Contato</h2>
+    <form action="https://api.staticforms.xyz/submit" method="post">
+      <label>Nome</label>
+      <input type="text" name="name" placeholder="Digite seu nome" autocomplete="off" required>
+      <label>Email</label>
+      <input type="email" name="email" placeholder="Digite seu email" autocomplete="off" required>
+      <label>Mensagem</label>
+      <textarea name="message" cols="30" rows="10" placeholder="Digite sua mensagem" required></textarea>
       <button type="submit">Enviar</button>
+
+      <input type="hidden" name="apiKey" value="sf_2eml489jfj3gbm83h054chn4">
+      <input type="hidden" name="redirectTo" value="obrigado.html">
     </form>
-  </main>
-  <!-- <script src="https://www.google.com/recaptcha/api.js" async defer></script> -->
+  </section>
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Festejando. Todos os direitos reservados.</p>
+      <div class="social">
+        <a href="#">Instagram</a> |
+        <a href="#">Facebook</a> |
+        <a href="#">YouTube</a>
+      </div>
+    </div>
+  </footer>
+
+
+  <script src="scripts.js"></script>
 </body>
 </html>
