--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,6 @@
                   <li><a href="cultura.html">História</a></li>
                   <li><a href="galeria.html">Galeria</a></li>
                   <li><a href="receitas.html">Receitas</a></li>
-                  <li><a href="obrigado.html">Receitas</a></li>
                   <li><a href="musica.html">Música</a></li>
                   <li><a href="sobre.html">Sobre</a></li>
                   <li><a href="contato.html">Contato</a></li>
@@ -38,7 +37,7 @@
       <button type="submit">Enviar</button>
 
       <input type="hidden" name="apiKey" value="sf_2eml489jfj3gbm83h054chn4">
-      <input type="hidden" name="redirectTo" value="obrigado.html">
+      <input type="hidden" name="redirectTo" value="https://jeffe499.github.io/Festejando-do-campo-cidade/obrigado.html">
     </form>
   </section>
   <footer>
