--- a/obrigado.html
+++ b/obrigado.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesobrigado.css" />
     <title>Document</title>
 </head>
 <body class="main">
+    <br><br>
     <h1 class="text">Obrigado pelo contato</h1>
     <p class="paragrafo">Em breve entrarei em contato.</p>
-    <a href="contato.html" class="btn">Home</a>
+    <a href="contato.html" class="btn">Voltar</a>
+
+    <script src="scripts.js"></script>
+      <footer>
+        <div class="container">
+          <p>&copy; 2025 Festejando. Todos os direitos reservados.</p>
+          <div class="social">
+            <a href="#">Instagram</a> |
+            <a href="#">Facebook</a> |
+            <a href="#">YouTube</a>
+          </div>
+        </div>
+      </footer>
+
 </body>
+
+ 
 </html>
