--- a/sobre.html
+++ b/sobre.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>Festejando: do campo à cidade – Sobre</title>
-  <link rel="stylesheet" href="stylescultura.css" />
+  <link rel="stylesheet" href="stylessobre.css" />
 </head>
 <body>
   <header>
@@ -19,6 +19,7 @@
           <li><a href="musica.html">Música</a></li>
           <li><a href="sobre.html" class="active">Sobre</a></li>
           <li><a href="contato.html">Contato</a></li>
+          <li><a href="comentarios.html">Forum</a></li>
         </ul>
       </nav>
     </div>
@@ -62,7 +63,7 @@
     <section>
       <h3>Contato</h3>
       <p>
-        Tem alguma sugestão, história ou festa para compartilhar?  <li><a href="contato.html">Contato</a></li>
+        Quer compartilhar uma musica conosco?  <li><a href="contato.html">Contato</a></li></a>
       </p>
     </section>
   </main>
