--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
               <li><a href="musica.html">Música</a></li>
               <li><a href="sobre.html">Sobre</a></li>
               <li><a href="contato.html">Contato</a></li>
+              <li><a href="comentarios.html">Forum</a></li>
             </ul>
           </nav>
         </div>
