--- a/publicar.html
+++ b/publicar.html
@@ -29,7 +29,11 @@
         <button type="button" id="removeImageBtn" class="remove-image-btn">×</button>
       </div>
 
-      <button type="submit" id="publishBtn" disabled>Publicar</button>
+      <button type="submit" id="publishBtn" disabled>Publicar </a></button>
+
+      <h1>
+        <a href="comentarios.html" class="button-voltar">Voltar</a>
+      </h1>
     </form>
   </div>
 
