--- a/comentarios.html
+++ b/comentarios.html
@@ -36,5 +36,16 @@
     });
   </script>
   <script src="comentarios.js"></script>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Festejando. Todos os direitos reservados.</p>
+      <div class="social">
+        <a href="#">Instagram</a> |
+        <a href="#">Facebook</a> |
+        <a href="#">YouTube</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
