--- a/receitas.html
+++ b/receitas.html
@@ -1,36 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>Festejando: do campo à cidade</title>
-        <link rel="stylesheet" href="stylesreceitas.css" />
-      </head>
-      <body>
-        <header>
-          <div class="container">
-            <h1>Festejando: do campo à cidade</h1>
-             <nav>
-              <ul>
-                  <li><a href="index.html">Início</a></li>
-                  <li><a href="cultura.html">História</a></li>
-                  <li><a href="galeria.html">Galeria</a></li>
-                  <li><a href="receitas.html">Receitas</a></li>
-                  <li><a href="musica.html">Música</a></li>
-                  <li><a href="sobre.html">Sobre</a></li>
-                  <li><a href="contato.html">Contato</a></li>
-                  <li><a href="comentarios.html">Forum</a></li>
-                </ul>
-            </nav>
-          </div>
-        </header>
-      
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Festejando: do campo à cidade</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <header>
+    <div class="container">
+      <h1>Festejando: do campo à cidade</h1>
+      <button class="btn-menu" aria-label="Abrir menu">☰</button>
+      <nav class="nav-menu">
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="cultura.html">História</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="receitas.html">Receitas</a></li>
+          <li><a href="musica.html">Música</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="contato.html">Contato</a></li>
+          <li><a href="comentarios.html">Fórum</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
   <main class="container">
     <h2>Receitas e Gastronomia</h2>
-    <p>
-        ㅤ
-    </p>
+
     <article>
       <h3>Pamonha</h3>
       <img src="img/pamonha.png" alt="Pamonha tradicional" />
@@ -42,29 +40,30 @@
         <li>1 pitada de sal</li>
       </ul>
       <p>
-        Modo de preparo: Descasque as espigas e reserve as palhas. Rale os grãos ou bata no liquidificador com o leite até obter uma massa homogênea. Adicione o açúcar, a manteiga e o sal, misturando bem. Preencha as palhas com a massa, dobre e amarre. Cozinhe em água fervente por cerca de 1 hora. Sirva quente ou fria.
+        Modo de preparo: Descasque as espigas e reserve as palhas. Rale os grãos ou bata no
+        liquidificador com o leite até obter uma massa homogênea. Adicione o açúcar, a manteiga
+        e o sal, misturando bem. Preencha as palhas com a massa, dobre e amarre. Cozinhe em água
+        fervente por cerca de 1 hora. Sirva quente ou fria.
       </p>
     </article>
-    <p>
-        ㅤ
-    </p>
+
     <article>
       <h3>Hambúrguer Gourmet</h3>
-      <img src="img/hambuguer.png" alt="Hambúrguer gourmet suculento" />
+      <img src="img/hamburguer.png" alt="Hambúrguer gourmet suculento" />
       <ul>
-        <li>1 kg de patinho moído</li>
-        <li>150 g de bacon triturado</li>
+        <li>1 kg de patinho moído</li>
+        <li>150 g de bacon triturado</li>
         <li>1 ovo</li>
         <li>Sal e pimenta-do-reino a gosto</li>
         <li>Pães de hambúrguer, queijo, alface, tomate e cebola roxa para montar</li>
       </ul>
       <p>
-        Modo de preparo: Misture a carne moída, o bacon, o ovo, o sal e a pimenta até obter uma massa homogênea. Modele os hambúrgueres e grelhe em chapa quente ou asse na churrasqueira até o ponto desejado. Monte os lanches com os acompanhamentos de sua preferência.
+        Modo de preparo: Misture a carne moída, o bacon, o ovo, o sal e a pimenta até obter uma
+        massa homogênea. Modele os hambúrgueres e grelhe em chapa quente ou asse na churrasqueira
+        até o ponto desejado. Monte os lanches com os acompanhamentos de sua preferência.
       </p>
     </article>
-    <p>
-        ㅤ
-    </p>
+
     <article>
       <h3>Bolo de Fubá</h3>
       <img src="img/bolo.png" alt="Bolo de fubá caseiro" />
@@ -80,24 +79,19 @@
         <li>1 pitada de sal</li>
       </ul>
       <p>
-        Modo de preparo: No liquidificador, bata os ovos, o leite, o óleo e o açúcar até obter uma mistura homogênea. Em uma tigela, misture o fubá, a farinha, o fermento, a erva-doce e o sal. Incorpore a mistura líquida aos ingredientes secos, mexendo bem. Despeje em forma untada e enfarinhada e asse em forno pré-aquecido a 180°C por aproximadamente 40 minutos.
+        Modo de preparo: No liquidificador, bata os ovos, o leite, o óleo e o açúcar até obter
+        uma mistura homogênea. Em uma tigela, misture o fubá, a farinha, o fermento, a erva-doce e
+        o sal. Incorpore a mistura líquida aos ingredientes secos, mexendo bem. Despeje em
+        forma untada e enfarinhada e asse em forno pré-aquecido a 180 °C por aproximadamente 40
+        minutos.
       </p>
     </article>
-
-
-    <p>
-        ㅤ
-    </p>
-    <p>
-      Quer compartilhar sua receita conosco?  <li><a href="contato.html">Contato</a></li></a>
-    </p>
   </main>
 
-  
-
-  <footer>
+  <!-- Footer full-width -->
+  <footer class="site-footer">
     <div class="container">
-      <p>&copy; 2025 Festejando. Todos os direitos reservados.</p>
+      <p>© 2025 Festejando. Todos os direitos reservados.</p>
       <div class="social">
         <a href="#">Instagram</a> |
         <a href="#">Facebook</a> |
@@ -105,7 +99,6 @@
       </div>
     </div>
   </footer>
-
 
   <script src="scripts.js"></script>
 </body>
