--- a/comentarios.html
+++ b/comentarios.html
@@ -9,34 +9,27 @@
   <header>
     <div class="container">
       <h1>Festejando: do campo à cidade</h1>
-      <nav>
+     <nav>
         <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="cultura.html">História</a></li>
-          <li><a href="galeria.html">Galeria</a></li>
-          <li><a href="receitas.html">Receitas</a></li>
-          <li><a href="musica.html">Música</a></li>
-          <li><a href="sobre.html" class="active">Sobre</a></li>
-          <li><a href="contato.html">Contato</a></li>
-          <li><a href="comentarios.html">Forum</a></li>
-        </ul>
+            <li><a href="index.html">Início</a></li>
+            <li><a href="cultura.html">História</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
+            <li><a href="receitas.html">Receitas</a></li>
+            <li><a href="musica.html">Música</a></li>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="contato.html">Contato</a></li>
+            <li><a href="comentarios.html">Forum</a></li>
+          </ul>
       </nav>
     </div>
   </header>
   <div class="feed-container">
-    <h1 style="color:#2e7d32;">Comentarios</h1>
-    <h2>Feed de Postagens</h2>
+    <h1 style="color:#2e7d32;">Comentários</h1>
     <div id="postsList" class="posts-list"></div>
+    <div id="pagination" class="pagination"></div>
     <button id="newPostBtn" class="new-post-btn">＋</button>
   </div>
-
-  <script>
-    document.getElementById('newPostBtn').addEventListener('click', () => {
-      window.location.href = 'publicar.html';
-    });
-  </script>
   <script src="comentarios.js"></script>
-
   <footer>
     <div class="container">
       <p>&copy; 2025 Festejando. Todos os direitos reservados.</p>
@@ -47,5 +40,6 @@
       </div>
     </div>
   </footer>
+
 </body>
 </html>
