--- a/receitas.html
+++ b/receitas.html
@@ -49,7 +49,7 @@
 
     <article>
       <h3>Hambúrguer Gourmet</h3>
-      <img src="img/hamburguer.png" alt="Hambúrguer gourmet suculento" />
+      <img src="img/hambuguer.png" alt="Hambúrguer gourmet suculento" />
       <ul>
         <li>1 kg de patinho moído</li>
         <li>150 g de bacon triturado</li>
