--- a/publicar.html
+++ b/publicar.html
@@ -21,7 +21,7 @@
       <textarea id="body" rows="6" placeholder="Escreva sua mensagem..." required></textarea>
 
       <label for="image" class="custom-file-label">
-        <span>➕ Adicionar imagem (opcional)</span>
+        <span>Adicionar imagem (opcional)</span>
         <input type="file" id="image" accept="image/*">
       </label>
       <div id="previewContainer" class="preview-container" hidden>
