--- a/galeria.html
+++ b/galeria.html
@@ -1,54 +1,50 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>Festejando: do campo à cidade</title>
-        <link rel="stylesheet" href="stylesgaleria.css" />
-      </head>
-      <body>
-        <header>
-          <div class="container">
-            <h1>Festejando: do campo à cidade</h1>
-            <nav>
-              <ul>
-                  <li><a href="index.html">Início</a></li>
-                  <li><a href="cultura.html">História</a></li>
-                  <li><a href="galeria.html">Galeria</a></li>
-                  <li><a href="receitas.html">Receitas</a></li>
-                  <li><a href="musica.html">Música</a></li>
-                  <li><a href="sobre.html">Sobre</a></li>
-                  <li><a href="contato.html">Contato</a></li>
-                  <li><a href="comentarios.html">Forum</a></li>
-                </ul>
-            </nav>
-          </div>
-        </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Festejando: Conectando Pessoas, Compartilhando Ideias</title>
+  <link rel="stylesheet" href="stylesgaleria.css" />
+</head>
+<body>
+  <header>
+    <div class="container">
+      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
+      <nav aria-label="Menu principal">
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="cultura.html">História</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="receitas.html">Receitas</a></li>
+          <li><a href="musica.html">Música</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="contato.html">Contato</a></li>
+          <li><a href="comentarios.html">Fórum</a></li>
+          <li><a href="profile.html">Perfil</a></li>
+          <li><a href="login.html" id="logoutLink">Logout</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
   <main class="container">
     <h2>Galeria de Fotos e Vídeos</h2>
     <div class="galeria">
       <div class="item">
-        <img src="img/exemplo1.jpg" alt="Exemplo 1" />
+        <img src="img/exemplo1.jpg" alt="Pessoa fantasiada dançando festa típica" />
       </div>
       <div class="item">
-        <img src="img/exemplo2.jpg" alt="Exemplo 2" />
+        <img src="img/exemplo2.jpg" alt="Grupo celebrando com bandeirolas" />
       </div>
-      <!-- Adicione mais imagens aqui -->
+      <!-- Adicione mais imagens ou vídeos abaixo -->
     </div>
   </main>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Festejando. Todos os direitos reservados.</p>
-      <div class="social">
-        <a href="#">Instagram</a> |
-        <a href="#">Facebook</a> |
-        <a href="#">YouTube</a>
-      </div>
+      <p>&copy; 2025 Festejando, site criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
     </div>
   </footer>
-
 
   <script src="scripts.js"></script>
 </body>
