--- a/receitas.html
+++ b/receitas.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Festejando: do campo à cidade</title>
+  <title>Festejando: Conectando Pessoas, Compartilhando Ideias</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>Festejando: do campo à cidade</h1>
+      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
       <button class="btn-menu" aria-label="Abrir menu">☰</button>
       <nav class="nav-menu">
         <ul>
@@ -21,6 +21,8 @@
           <li><a href="sobre.html">Sobre</a></li>
           <li><a href="contato.html">Contato</a></li>
           <li><a href="comentarios.html">Fórum</a></li>
+          <li><a href="profile.html">Perfil</a></li>
+          <li><a href="login.html" id="logoutLink">Logout</a></li>
         </ul>
       </nav>
     </div>
@@ -39,12 +41,7 @@
         <li>1 colher (sopa) de manteiga</li>
         <li>1 pitada de sal</li>
       </ul>
-      <p>
-        Modo de preparo: Descasque as espigas e reserve as palhas. Rale os grãos ou bata no
-        liquidificador com o leite até obter uma massa homogênea. Adicione o açúcar, a manteiga
-        e o sal, misturando bem. Preencha as palhas com a massa, dobre e amarre. Cozinhe em água
-        fervente por cerca de 1 hora. Sirva quente ou fria.
-      </p>
+      <p>Modo de preparo: Descasque as espigas e reserve as palhas. Rale os grãos ou bata no liquidificador com o leite até obter uma massa homogênea. Adicione o açúcar, a manteiga e o sal, misturando bem. Preencha as palhas com a massa, dobre e amarre. Cozinhe em água fervente por cerca de 1 hora. Sirva quente ou fria.</p>
     </article>
 
     <article>
@@ -57,11 +54,7 @@
         <li>Sal e pimenta-do-reino a gosto</li>
         <li>Pães de hambúrguer, queijo, alface, tomate e cebola roxa para montar</li>
       </ul>
-      <p>
-        Modo de preparo: Misture a carne moída, o bacon, o ovo, o sal e a pimenta até obter uma
-        massa homogênea. Modele os hambúrgueres e grelhe em chapa quente ou asse na churrasqueira
-        até o ponto desejado. Monte os lanches com os acompanhamentos de sua preferência.
-      </p>
+      <p>Modo de preparo: Misture a carne moída, o bacon, o ovo, o sal e a pimenta até obter uma massa homogênea. Modele os hambúrgueres e grelhe em chapa quente ou asse na churrasqueira até o ponto desejado. Monte os lanches com os acompanhamentos de sua preferência.</p>
     </article>
 
     <article>
@@ -78,25 +71,13 @@
         <li>1 colher (sopa) de sementes de erva-doce (opcional)</li>
         <li>1 pitada de sal</li>
       </ul>
-      <p>
-        Modo de preparo: No liquidificador, bata os ovos, o leite, o óleo e o açúcar até obter
-        uma mistura homogênea. Em uma tigela, misture o fubá, a farinha, o fermento, a erva-doce e
-        o sal. Incorpore a mistura líquida aos ingredientes secos, mexendo bem. Despeje em
-        forma untada e enfarinhada e asse em forno pré-aquecido a 180 °C por aproximadamente 40
-        minutos.
-      </p>
+      <p>Modo de preparo: No liquidificador, bata os ovos, o leite, o óleo e o açúcar até obter uma mistura homogênea. Em uma tigela, misture o fubá, a farinha, o fermento, a erva-doce e o sal. Incorpore a mistura líquida aos ingredientes secos, mexendo bem. Despeje em forma untada e enfarinhada e asse em forno pré-aquecido a 180 °C por aproximadamente 40 minutos.</p>
     </article>
   </main>
 
-  <!-- Footer full-width -->
-  <footer class="site-footer">
+  <footer>
     <div class="container">
-      <p>© 2025 Festejando. Todos os direitos reservados.</p>
-      <div class="social">
-        <a href="#">Instagram</a> |
-        <a href="#">Facebook</a> |
-        <a href="#">YouTube</a>
-      </div>
+      <p>&copy; 2025 Festejando, site criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
     </div>
   </footer>
 
