--- a/sobre.html
+++ b/sobre.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Festejando: do campo à cidade – Sobre</title>
+  <title>Festejando: Conectando Pessoas, Compartilhando Ideias</title>
   <link rel="stylesheet" href="stylessobre.css" />
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>Festejando: do campo à cidade</h1>
+      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
       <nav>
         <ul>
           <li><a href="index.html">Início</a></li>
@@ -17,9 +17,11 @@
           <li><a href="galeria.html">Galeria</a></li>
           <li><a href="receitas.html">Receitas</a></li>
           <li><a href="musica.html">Música</a></li>
-          <li><a href="sobre.html" class="active">Sobre</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
           <li><a href="contato.html">Contato</a></li>
-          <li><a href="comentarios.html">Forum</a></li>
+          <li><a href="comentarios.html">Fórum</a></li>
+          <li><a href="profile.html">Perfil</a></li>
+          <li><a href="login.html" id="logoutLink">Logout</a></li>
         </ul>
       </nav>
     </div>
@@ -27,7 +29,6 @@
 
   <main class="container">
     <h2>Sobre “Festejando: do campo à cidade”</h2>
-    
     <section>
       <p>
         <strong>Festejando: do campo à cidade</strong> é um portal dedicado a celebrar e documentar as festas típicas brasileiras,
@@ -59,17 +60,11 @@
         brasileiras, junte-se a nós!
       </p>
     </section>
-
   </main>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Festejando. Todos os direitos reservados.</p>
-      <div class="social">
-        <a href="#">Instagram</a> |
-        <a href="#">Facebook</a> |
-        <a href="#">YouTube</a>
-      </div>
+      <p>&copy; 2025 Festejando, site criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
     </div>
   </footer>
 
