--- a/comentarios.html
+++ b/comentarios.html
@@ -2,44 +2,43 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>Festejando: Feed</title>
+  <title>Festejando: Conectando Pessoas, Compartilhando Ideias</title>
   <link rel="stylesheet" href="stylescomentarios.css">
 </head>
 <body>
+
   <header>
     <div class="container">
-      <h1>Festejando: do campo à cidade</h1>
-     <nav>
+      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
+      <nav>
         <ul>
-            <li><a href="index.html">Início</a></li>
-            <li><a href="cultura.html">História</a></li>
-            <li><a href="galeria.html">Galeria</a></li>
-            <li><a href="receitas.html">Receitas</a></li>
-            <li><a href="musica.html">Música</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="comentarios.html">Forum</a></li>
-          </ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="cultura.html">História</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="receitas.html">Receitas</a></li>
+          <li><a href="musica.html">Música</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="contato.html">Contato</a></li>
+          <li><a href="comentarios.html">Fórum</a></li>
+          <li><a href="profile.html">Perfil</a></li>
+          <li><a href="login.html" id="logoutLink">Logout</a></li>
+        </ul>
       </nav>
     </div>
   </header>
+
   <div class="feed-container">
-    <h1 style="color:#2e7d32;">Comentários</h1>
-    <div id="postsList" class="posts-list"></div>
+    <div id="postsList"></div>
     <div id="pagination" class="pagination"></div>
-    <button id="newPostBtn" class="new-post-btn">＋</button>
+    <button id="newPostBtn" class="new-post-btn" aria-label="Novo post">＋</button>
   </div>
-  <script src="comentarios.js"></script>
+
   <footer>
     <div class="container">
-      <p>&copy; 2025 Festejando. Todos os direitos reservados.</p>
-      <div class="social">
-        <a href="#">Instagram</a> |
-        <a href="#">Facebook</a> |
-        <a href="#">YouTube</a>
-      </div>
+      <p>&copy; 2025 Festejando, site criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
     </div>
   </footer>
 
+  <script src="comentarios.js"></script>
 </body>
 </html>
