--- a/cultura.html
+++ b/cultura.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-        <title>Festejando: do campo à cidade</title>
-        <link rel="stylesheet" href="stylescultura.css" />
-      </head>
-      <body>
-        <header>
-          <div class="container">
-            <h1>Festejando: do campo à cidade</h1>
-           <nav>
-              <ul>
-                  <li><a href="index.html">Início</a></li>
-                  <li><a href="cultura.html">História</a></li>
-                  <li><a href="galeria.html">Galeria</a></li>
-                  <li><a href="receitas.html">Receitas</a></li>
-                  <li><a href="musica.html">Música</a></li>
-                  <li><a href="sobre.html">Sobre</a></li>
-                  <li><a href="contato.html">Contato</a></li>
-                  <li><a href="comentarios.html">Forum</a></li>
-                </ul>
-            </nav>
-          </div>
-        </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Festejando: Conectando Pessoas, Compartilhando Ideias</title>
+  <link rel="stylesheet" href="stylescultura.css" />
+</head>
+<body>
+  <header>
+    <div class="container">
+      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
+      <nav aria-label="Menu principal">
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="cultura.html">História</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="receitas.html">Receitas</a></li>
+          <li><a href="musica.html">Música</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="contato.html">Contato</a></li>
+          <li><a href="comentarios.html">Fórum</a></li>
+          <li><a href="profile.html">Perfil</a></li>
+          <li><a href="login.html" id="logoutLink">Logout</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
   <main class="container">
     <section aria-labelledby="titulo-historia">
@@ -31,24 +33,11 @@
       <p>
         Explore a evolução das festas populares brasileiras, das tradições rurais até as celebrações urbanas modernas.
       </p>
-
       <ul class="timeline">
-        <li>
-          <strong>Século XVI</strong>
-          Chegada das festas juninas com os colonizadores.
-        </li>
-        <li>
-          <strong>Século XIX</strong>
-          Popularização das quermesses no interior do país.
-        </li>
-        <li>
-          <strong>Década de 1950</strong>
-          Início dos blocos de carnaval em cidades médias.
-        </li>
-        <li>
-          <strong>Atualidade</strong>
-          Festas híbridas que misturam sertanejo e eletrônico.
-        </li>
+        <li><strong>Século XVI:</strong> Chegada das festas juninas com os colonizadores.</li>
+        <li><strong>Século XIX:</strong> Popularização das quermesses no interior do país.</li>
+        <li><strong>Década de 1950:</strong> Início dos blocos de carnaval em cidades médias.</li>
+        <li><strong>Atualidade:</strong> Festas híbridas que misturam sertanejo e eletrônico.</li>
       </ul>
     </section>
 
@@ -105,12 +94,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Festejando. Todos os direitos reservados.</p>
-      <div class="social">
-        <a href="#" aria-label="Instagram">Instagram</a> |
-        <a href="#" aria-label="Facebook">Facebook</a> |
-        <a href="#" aria-label="YouTube">YouTube</a>
-      </div>
+      <p>&copy; 2025 Festejando, site criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
     </div>
   </footer>
 
