--- a/index.html
+++ b/index.html
@@ -2,34 +2,36 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>Festejando: do campo à cidade</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Festejando: Conectando Pessoas, Compartilhando Ideias</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <header>
-        <div class="container1">
-          <h1>Festejando: do campo à cidade</h1>
-          <nav>
-            <ul>
-              <li><a href="index.html">Início</a></li>
-              <li><a href="cultura.html">História</a></li>
-              <li><a href="galeria.html">Galeria</a></li>
-              <li><a href="receitas.html">Receitas</a></li>
-              <li><a href="musica.html">Música</a></li>
-              <li><a href="sobre.html">Sobre</a></li>
-              <li><a href="contato.html">Contato</a></li>
-              <li><a href="comentarios.html">Forum</a></li>
-            </ul>
-          </nav>
-        </div>
-      </header>
-      
+  <header>
+    <div class="container">
+      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
+      <nav aria-label="Menu principal">
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="cultura.html">História</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="receitas.html">Receitas</a></li>
+          <li><a href="musica.html">Música</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="contato.html">Contato</a></li>
+          <li><a href="comentarios.html">Fórum</a></li>
+          <li><a href="profile.html">Perfil</a></li>
+          <li><a href="login.html" id="logoutLink">Logout</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
   <main>
     <section id="hero">
-      <img src="img/banner.jpg" alt="Festas no campo e na cidade" />
+      <img src="img/banner.jpg" alt="Imagem de festas brasileiras, com elementos do campo e da cidade" />
     </section>
+
     <section id="intro" class="container">
       <h3>Bem-vindo ao Festejando</h3>
       <p>Este portal reúne o melhor das festas típicas brasileiras, mostrando como a cultura rural e urbana se conectam em celebrações únicas.</p>
@@ -38,15 +40,8 @@
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Festejando. Todos os direitos reservados.</p>
-      <div class="social">
-        <a href="#">Instagram</a> |
-        <a href="#">Facebook</a> |
-        <a href="#">YouTube</a>
-      </div>
+      <p>&copy; 2025 Festejando, site criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
     </div>
   </footer>
-
-  <script src="scripts.js"></script>
 </body>
 </html>
