--- a/musica.html
+++ b/musica.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Festejando: do campo à cidade - Música e Dança</title>
-  <link rel="stylesheet" href="stylesmusicas.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Festejando: Conectando Pessoas, Compartilhando Ideias</title>
+  <link rel="stylesheet" href="stylesmusicas.css" />
 </head>
 <body>
   <header>
     <div class="container">
-      <h1>Festejando: do campo à cidade</h1>
+      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
       <nav>
         <ul class="nav-menu">
-            <li><a href="index.html">Início</a></li>
-            <li><a href="cultura.html">História</a></li>
-            <li><a href="galeria.html">Galeria</a></li>
-            <li><a href="receitas.html">Receitas</a></li>
-            <li><a href="musica.html">Música</a></li>
-            <li><a href="sobre.html">Sobre</a></li>
-            <li><a href="contato.html">Contato</a></li>
-            <li><a href="comentarios.html">Forum</a></li>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="cultura.html">História</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="receitas.html">Receitas</a></li>
+          <li><a href="musica.html">Música</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="contato.html">Contato</a></li>
+          <li><a href="comentarios.html">Fórum</a></li>
+          <li><a href="profile.html">Perfil</a></li>
+          <li><a href="login.html" id="logoutLink">Logout</a></li>
         </ul>
       </nav>
       <button class="btn-menu">&#9776;</button>
@@ -33,43 +35,35 @@
     <section class="playlist">
       <h3>🎶 Forró e Sertanejo</h3>
       <ul>
-        <li><a href="https://www.youtube.com/watch?v=zIy3EwyBBI0" target="_blank">“Asa Branca” – Luiz Gonzaga</a></li>
-        <li><a href="https://www.youtube.com/watch?v=ePjtnSPFWK8" target="_blank">“Evidências” – Chitãozinho & Xororó</a></li>
-        <li><a href="https://www.youtube.com/watch?v=aup_ZeTHtcI" target="_blank">“Romaria” – Renato Teixeira</a></li>
-        <li><a href="https://www.youtube.com/watch?v=IAWkTqqTZOw" target="_blank">“Pagode Russo” – Luiz Gonzaga</a></li>
+        <li><a href="https://www.youtube.com/watch?v=zIy3EwyBBI0" target="_blank" rel="noopener noreferrer">“Asa Branca” – Luiz Gonzaga</a></li>
+        <li><a href="https://www.youtube.com/watch?v=ePjtnSPFWK8" target="_blank" rel="noopener noreferrer">“Evidências” – Chitãozinho &amp; Xororó</a></li>
+        <li><a href="https://www.youtube.com/watch?v=aup_ZeTHtcI" target="_blank" rel="noopener noreferrer">“Romaria” – Renato Teixeira</a></li>
+        <li><a href="https://www.youtube.com/watch?v=IAWkTqqTZOw" target="_blank" rel="noopener noreferrer">“Pagode Russo” – Luiz Gonzaga</a></li>
       </ul>
     </section>
 
     <section class="playlist">
       <h3>🎧 Funk e Eletrônica</h3>
       <ul>
-        <li><a href="https://www.youtube.com/watch?v=Xp-dKdSUuLk" target="_blank">“Você Partiu Meu Coração” – Nego do Borel feat. Anitta & Wesley Safadão</a></li>
-        <li><a href="https://www.youtube.com/watch?v=JVpTp8IHdEg" target="_blank">“Hear Me Now” – Alok, Bruno Martini feat. Zeeba</a></li>
-        <li><a href="https://www.youtube.com/watch?v=KWjV25q34Hw" target="_blank">“Piece of Your Heart” – Meduza</a></li>
+        <li><a href="https://www.youtube.com/watch?v=Xp-dKdSUuLk" target="_blank" rel="noopener noreferrer">“Você Partiu Meu Coração” – Nego do Borel feat. Anitta &amp; Wesley Safadão</a></li>
+        <li><a href="https://www.youtube.com/watch?v=JVpTp8IHdEg" target="_blank" rel="noopener noreferrer">“Hear Me Now” – Alok, Bruno Martini feat. Zeeba</a></li>
+        <li><a href="https://www.youtube.com/watch?v=KWjV25q34Hw" target="_blank" rel="noopener noreferrer">“Piece of Your Heart” – Meduza</a></li>
       </ul>
     </section>
 
     <section class="playlist">
       <h3>🪗 Cultura Popular Brasileira</h3>
       <ul>
-        <li><a href="https://www.youtube.com/watch?v=q67-GePO2Lw" target="_blank">“Olha pro Céu” – Dominguinhos</a></li>
-        <li><a href="https://www.youtube.com/watch?v=3ueru3eELi4" target="_blank">“Canto de Ossanha” – Baden Powell e Vinicius de Moraes</a></li>
-        <li><a href="https://www.youtube.com/watch?v=n8QJrkIghaY" target="_blank">“Maracatu Atômico” – Chico Science & Nação Zumbi</a></li>
+        <li><a href="https://www.youtube.com/watch?v=q67-GePO2Lw" target="_blank" rel="noopener noreferrer">“Olha pro Céu” – Dominguinhos</a></li>
+        <li><a href="https://www.youtube.com/watch?v=3ueru3eELi4" target="_blank" rel="noopener noreferrer">“Canto de Ossanha” – Baden Powell e Vinicius de Moraes</a></li>
+        <li><a href="https://www.youtube.com/watch?v=n8QJrkIghaY" target="_blank" rel="noopener noreferrer">“Maracatu Atômico” – Chico Science &amp; Nação Zumbi</a></li>
       </ul>
-      <p>
-        ㅤ
-    </p>
     </section>
   </main>
 
   <footer>
     <div class="container">
-      <p>&copy; 2025 Festejando: do campo à cidade. Todos os direitos reservados.</p>
-      <div class="social">
-        <a href="#">Instagram</a>
-        <a href="#">Facebook</a>
-        <a href="#">YouTube</a>
-      </div>
+      <p>&copy; 2025 Festejando, site criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
     </div>
   </footer>
 
