--- a/obrigado.html
+++ b/obrigado.html
@@ -1,38 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesobrigado.css" />
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Anton&family=Boldonse&family=Cabin:ital,wght@0,400..700;1,400..700&family=Cal+Sans&family=Lilita+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Special+Gothic+Condensed+One&family=Special+Gothic+Expanded+One&display=swap');
-    </style>
-    <title>Document</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="stylesobrigado.css" />
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Anton&family=Boldonse&family=Cabin:ital,wght@0,400..700;1,400..700&family=Cal+Sans&family=Lilita+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Oswald:wght@200..700&family=Special+Gothic+Condensed+One&family=Special+Gothic+Expanded+One&display=swap');
+  </style>
+  <title>Obrigado</title>
 </head>
 <body>
-<main>
-    <br><br>
+  <main>
+    <br /><br />
     <h1 id="text">Obrigado pelo contato</h1>
     <p id="paragrafo">Em breve entrarei em contato.</p>
-    <a href="contato.html", id="btn"> Voltar</a>
+    <a href="contato.html" id="btn">Voltar</a>
+  </main>
+  <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+  
+  <script src="scripts.js"></script>
 
-</main>
-<br><br><br><br><br><br><br><br><br><br><br><br>
-    <script src="scripts.js"></script>
-
-      <footer>
-        <div class="container">
-          <p>&copy; 2025 Festejando. Todos os direitos reservados.</p>
-          <div class="social">
-            <a href="#">Instagram</a> |
-            <a href="#">Facebook</a> |
-            <a href="#">YouTube</a>
-          </div>
-        </div>
-      </footer>
-
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Festejando, site criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
+    </div>
+  </footer>
 </body>
-
- 
 </html>
