--- a/publicar.html
+++ b/publicar.html
@@ -1,39 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Forum: Criar Postagem</title>
+  <title>Festejando: Conectando Pessoas, Compartilhando Ideias</title>
   <link rel="stylesheet" href="stylespublicar.css">
 </head>
 <body>
   <div class="forum-post-container">
-    <h1 style="color: #2e7d32;">Festejando: do campo à cidade</h1>
-    <h2>Criar Postagem</h2>
-
+    <h1>Nova Postagem</h1>
     <form id="postForm">
-      <label for="name">Nome</label>
-      <input type="text" id="name" placeholder="Seu nome..." required>
-
-      <label for="email">E‑mail</label>
-      <input type="email" id="email" placeholder="seu@exemplo.com" required>
-
       <label for="body">Mensagem</label>
-      <textarea id="body" rows="6" placeholder="Escreva sua mensagem..." required></textarea>
-
-      <label for="image" class="custom-file-label">
-        <span>Adicionar imagem (opcional)</span>
-        <input type="file" id="image" accept="image/*">
-      </label>
-      <div id="previewContainer" class="preview-container" hidden>
-        <img id="previewImage" src="" alt="Pré‑visualização">
-        <button type="button" id="removeImageBtn" class="remove-image-btn">×</button>
-      </div>
-
-      <button type="submit" id="publishBtn" disabled>Publicar</button>
+      <textarea id="body" rows="5" required></textarea>
+      <button type="submit" id="publishBtn">Publicar</button>
       <a href="comentarios.html" class="button-voltar">Voltar</a>
     </form>
   </div>
-
   <script src="publicar.js"></script>
 </body>
 </html>
