--- a/comentarios.html
+++ b/comentarios.html
@@ -1,16 +1,27 @@
+<!-- comentarios.html -->
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Festejando: Conectando Pessoas, Compartilhando Ideias</title>
-  <link rel="stylesheet" href="stylescomentarios.css">
+  <link rel="stylesheet" href="stylescomentarios.css" />
 </head>
 <body>
+  <a href="#main" class="skip-link">Pular para o conteúdo principal</a>
 
-  <header>
-    <div class="container">
-      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
-      <nav>
+  <header class="site-header">
+    <div class="container header-inner">
+      <h1 class="logo">Festejando</h1>
+
+      <div class="accessibility-controls">
+        <button id="btn-contrast" aria-label="Alternar modo claro/escuro">🌓</button>
+        <button id="btn-font-decrease" aria-label="Diminuir fonte">A-</button>
+        <button id="btn-font-increase" aria-label="Aumentar fonte">A+</button>
+        <button id="btn-reset" aria-label="Redefinir preferências">⭯</button>
+      </div>
+
+      <nav class="menu" aria-label="Menu principal">
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="cultura.html">História</a></li>
@@ -21,17 +32,16 @@
           <li><a href="contato.html">Contato</a></li>
           <li><a href="comentarios.html">Fórum</a></li>
           <li><a href="profile.html">Perfil</a></li>
-          <li><a href="login.html" id="logoutLink">Logout</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <div class="feed-container">
+  <main id="main" class="container feed-container">
     <div id="postsList"></div>
     <div id="pagination" class="pagination"></div>
     <button id="newPostBtn" class="new-post-btn" aria-label="Novo post">＋</button>
-  </div>
+  </main>
 
   <footer>
     <div class="container">
@@ -39,6 +49,6 @@
     </div>
   </footer>
 
-  <script src="comentarios.js"></script>
+  <script src="comentarios.js" defer></script>
 </body>
 </html>
