--- a/contato.html
+++ b/contato.html
@@ -7,10 +7,24 @@
   <link rel="stylesheet" href="stylescontato.css" />
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
-      <nav>
+  <a href="#main" class="skip-link">Pular para o conteúdo principal</a>
+
+  <header class="site-header">
+    <div class="container header-inner">
+      <h1 class="logo"><a href="index.html">Festejando</a></h1>
+
+      <div class="accessibility-controls">
+        <button id="btn-contrast" aria-label="Alternar modo claro/escuro">🌓</button>
+        <button id="btn-font-decrease" aria-label="Diminuir fonte">A-</button>
+        <button id="btn-font-increase" aria-label="Aumentar fonte">A+</button>
+        <button id="btn-reset" aria-label="Redefinir preferências">⭯</button>
+      </div>
+
+      <button class="nav-toggle" aria-label="Abrir menu" aria-expanded="false">
+        <span></span><span></span><span></span>
+      </button>
+
+      <nav class="menu" aria-label="Menu principal">
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="cultura.html">História</a></li>
@@ -21,16 +35,15 @@
           <li><a href="contato.html">Contato</a></li>
           <li><a href="comentarios.html">Fórum</a></li>
           <li><a href="profile.html">Perfil</a></li>
-          <li><a href="login.html" id="logoutLink">Logout</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
+  <main id="main" class="container">
     <section>
       <h2>Contato</h2>
-      <form action="https://api.staticforms.xyz/submit" method="post">
+      <form id="form-contato" action="https://api.staticforms.xyz/submit" method="post">
         <label for="name">Nome</label>
         <input type="text" id="name" name="name" placeholder="Digite seu nome" autocomplete="off" required />
 
@@ -54,6 +67,6 @@
     </div>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="contato.js"></script>
 </body>
 </html>
