--- a/cultura.html
+++ b/cultura.html
@@ -3,16 +3,33 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Festejando: Conectando Pessoas, Compartilhando Ideias</title>
+  <meta name="description" content="História e cultura das festas populares brasileiras – de tradições rurais às celebrações urbanas modernas." />
+  <title>Festejando: História e Cultura</title>
   <link rel="stylesheet" href="stylescultura.css" />
+  <!-- Carrega o script após parsing do HTML -->
+  <script src="cultura.js" defer></script>
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
-      <nav aria-label="Menu principal">
+  <a href="#main" class="skip-link">Pular para o conteúdo principal</a>
+
+  <header class="site-header" role="banner">
+    <div class="container header-inner">
+      <h1 class="logo"><a href="index.html">Festejando</a></h1>
+
+      <div class="accessibility-controls" aria-label="Controles de acessibilidade">
+        <button id="btn-contrast"    aria-label="Alternar modo claro/escuro">🌓</button>
+        <button id="btn-font-decrease" aria-label="Diminuir fonte">A-</button>
+        <button id="btn-font-increase" aria-label="Aumentar fonte">A+</button>
+        <button id="btn-reset"        aria-label="Redefinir preferências">⭯</button>
+      </div>
+
+      <button class="nav-toggle" aria-label="Abrir menu" aria-expanded="false">
+        <span></span><span></span><span></span>
+      </button>
+
+      <nav class="menu" role="navigation" aria-label="Menu principal">
         <ul>
-          <li><a href="index.html">Início</a></li>
+         <li><a href="index.html">Início</a></li>
           <li><a href="cultura.html">História</a></li>
           <li><a href="galeria.html">Galeria</a></li>
           <li><a href="receitas.html">Receitas</a></li>
@@ -21,18 +38,15 @@
           <li><a href="contato.html">Contato</a></li>
           <li><a href="comentarios.html">Fórum</a></li>
           <li><a href="profile.html">Perfil</a></li>
-          <li><a href="login.html" id="logoutLink">Logout</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main class="container">
+  <main id="main" class="container" role="main">
     <section aria-labelledby="titulo-historia">
       <h2 id="titulo-historia">História e Cultura</h2>
-      <p>
-        Explore a evolução das festas populares brasileiras, das tradições rurais até as celebrações urbanas modernas.
-      </p>
+      <p>Explore a evolução das festas populares brasileiras, das tradições rurais até as celebrações urbanas modernas.</p>
       <ul class="timeline">
         <li><strong>Século XVI:</strong> Chegada das festas juninas com os colonizadores.</li>
         <li><strong>Século XIX:</strong> Popularização das quermesses no interior do país.</li>
@@ -43,9 +57,7 @@
 
     <section aria-labelledby="titulo-influencias">
       <h2 id="titulo-influencias">Influências Culturais</h2>
-      <p>
-        As festas brasileiras refletem a rica diversidade cultural do país, resultante da fusão de diferentes tradições:
-      </p>
+      <p>As festas brasileiras refletem a rica diversidade cultural do país, resultante da fusão de diferentes tradições:</p>
       <ul>
         <li><strong>Indígenas:</strong> Celebram a natureza e os ciclos da vida, influenciando rituais e danças.</li>
         <li><strong>Africanas:</strong> Introduziram ritmos, danças e religiões como o Candomblé, presentes em festas como o Maracatu.</li>
@@ -55,13 +67,11 @@
 
     <section aria-labelledby="titulo-regionais">
       <h2 id="titulo-regionais">Festas Regionais</h2>
-      <p>
-        Cada região do Brasil possui celebrações únicas que destacam suas tradições e identidade cultural:
-      </p>
+      <p>Cada região do Brasil possui celebrações únicas que destacam suas tradições e identidade cultural:</p>
       <ul>
         <li><strong>Festival de Parintins (AM):</strong> Disputa entre os bois Garantido e Caprichoso, com apresentações folclóricas e musicais.</li>
         <li><strong>Festa de São João (Nordeste):</strong> Comemorações juninas com quadrilhas, fogueiras e comidas típicas.</li>
-        <li><strong>Folia de Reis (Sudeste e Centro-Oeste):</strong> Grupos percorrem as ruas cantando e celebrando a visita dos Reis Magos.</li>
+        <li><strong>Folia de Reis (SE e CO):</strong> Grupos percorrem as ruas cantando e celebrando a visita dos Reis Magos.</li>
       </ul>
     </section>
 
@@ -76,28 +86,24 @@
 
     <section aria-labelledby="titulo-parana">
       <h2 id="titulo-parana">Festas Tradicionais do Paraná</h2>
-      <p>
-        O Paraná possui uma rica tradição festiva, com celebrações que refletem sua diversidade cultural:
-      </p>
+      <p>O Paraná possui uma rica tradição festiva, com celebrações que refletem sua diversidade cultural:</p>
       <ul>
-        <li><strong>Carnaval de Tibagi:</strong> Um dos mais tradicionais do estado, com desfiles de escolas de samba e blocos de rua.</li>
-        <li><strong>Congada da Lapa:</strong> Celebração de origem africana em homenagem a São Benedito, com danças e cantos tradicionais.</li>
-        <li><strong>Festa de Nossa Senhora do Rocio (Paranaguá):</strong> Maior festa religiosa do estado, reunindo milhares de fiéis em procissão.</li>
-        <li><strong>Münchenfest (Ponta Grossa):</strong> Festa do chope escuro, com apresentações musicais e culturais.</li>
-        <li><strong>Festa Nacional do Carneiro no Buraco (Campo Mourão):</strong> Evento gastronômico que celebra prato típico da região.</li>
-        <li><strong>ExpoLondrina (Londrina):</strong> Uma das maiores feiras agropecuárias do Brasil, com shows e exposições.</li>
-        <li><strong>Festa da Uva (Ponta Grossa):</strong> Celebração da colheita da uva, com atrações culturais e gastronômicas.</li>
-        <li><strong>Festa do Pinhão (Ponta Grossa):</strong> Evento que destaca a importância do pinhão na cultura local.</li>
+        <li><strong>Carnaval de Tibagi:</strong> Desfiles de escolas de samba e blocos de rua.</li>
+        <li><strong>Congada da Lapa:</strong> Danças e cantos em homenagem a São Benedito.</li>
+        <li><strong>Festa de Nossa Senhora do Rocio:</strong> Procissão em Paranaguá, a maior festa religiosa do estado.</li>
+        <li><strong>Münchenfest:</strong> Festa do chope escuro em Ponta Grossa, com música e gastronomia.</li>
+        <li><strong>Festa Nacional do Carneiro no Buraco:</strong> Evento gastronômico em Campo Mourão.</li>
+        <li><strong>ExpoLondrina:</strong> Feira agropecuária com shows e exposições.</li>
+        <li><strong>Festa da Uva:</strong> Comemoração da colheita em Ponta Grossa.</li>
+        <li><strong>Festa do Pinhão:</strong> Destaque para o pinhão na cultura local.</li>
       </ul>
     </section>
   </main>
 
-  <footer>
-    <div class="container">
-      <p>&copy; 2025 Festejando, site criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
+  <footer role="contentinfo">
+    <div class="container footer-inner">
+      <p>&copy; 2025 Festejando — criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
     </div>
   </footer>
-
-  <script src="scripts.js"></script>
 </body>
 </html>
