--- a/index.html
+++ b/index.html
@@ -7,10 +7,20 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
-      <nav aria-label="Menu principal">
+  <a href="#main" class="skip-link">Pular para o conteúdo principal</a>
+  <header class="site-header">
+    <div class="container header-inner">
+      <h1 class="logo">Festejando</h1>
+      <div class="accessibility-controls">
+        <button id="btn-contrast" aria-label="Alternar modo claro/escuro">🌓</button>
+        <button id="btn-font-decrease" aria-label="Diminuir fonte">A-</button>
+        <button id="btn-font-increase" aria-label="Aumentar fonte">A+</button>
+        <button id="btn-reset" aria-label="Redefinir preferências">⭯</button>
+      </div>
+      <button class="nav-toggle" aria-label="Abrir menu">
+        <span></span><span></span><span></span>
+      </button>
+      <nav class="menu" aria-label="Menu de navegação">
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="cultura.html">História</a></li>
@@ -21,27 +31,54 @@
           <li><a href="contato.html">Contato</a></li>
           <li><a href="comentarios.html">Fórum</a></li>
           <li><a href="profile.html">Perfil</a></li>
-          <li><a href="login.html" id="logoutLink">Logout</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main>
+  <main id="main">
     <section id="hero">
-      <img src="img/banner.jpg" alt="Imagem de festas brasileiras, com elementos do campo e da cidade" />
+      <img src="img/banner.jpg" alt="Festas típicas brasileiras" />
+      <div class="hero-overlay">
+        <h2>Do Campo à Cidade</h2>
+        <p>Viva a tradição das festas brasileiras com um toque moderno.</p>
+        <a href="#features" class="btn-primary">Saiba Mais</a>
+      </div>
     </section>
 
     <section id="intro" class="container">
       <h3>Bem-vindo ao Festejando</h3>
       <p>Este portal reúne o melhor das festas típicas brasileiras, mostrando como a cultura rural e urbana se conectam em celebrações únicas.</p>
     </section>
+
+    <section id="features" class="container">
+      <h3>Destaques</h3>
+      <div class="cards">
+        <a href="cultura.html" class="card">
+          <img src="img/quadrilha.jpg" alt="Quadrilha Junina" />
+          <h4>Quadrilha Junina</h4>
+          <p>Aprenda os passos da dança que anima todo São João.</p>
+        </a>
+        <a href="receitas.html" class="card">
+          <img src="img/comida.jpg" alt="Comidas Típicas" />
+          <h4>Comidas Típicas</h4>
+          <p>Receitas deliciosas: pamonha, canjica, bolo de milho e muito mais.</p>
+        </a>
+        <a href="musica.html" class="card">
+          <img src="img/musica.jpg" alt="Música Regional" />
+          <h4>Música Regional</h4>
+          <p>Conheça artistas que embalam as festas de Norte a Sul do Brasil.</p>
+        </a>
+      </div>
+    </section>
   </main>
 
   <footer>
-    <div class="container">
-      <p>&copy; 2025 Festejando, site criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
+    <div class="container footer-inner">
+      <p>&copy; 2025 Festejando — criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
     </div>
   </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
