--- a/signup.html
+++ b/signup.html
@@ -1,26 +1,66 @@
+<!-- signup.html -->
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Festejando – Criar Conta</title>
-  <link rel="stylesheet" href="stylesperfil.css">
+  <link rel="stylesheet" href="stylesperfil.css" />
 </head>
 <body>
-  <div class="auth-container">
+  <a href="#main" class="skip-link">Pular para o conteúdo principal</a>
+
+  <header class="site-header">
+    <div class="container header-inner">
+      <h1 class="logo"><a href="index.html">Festejando</a></h1>
+      <div class="accessibility-controls">
+        <button id="btn-contrast" aria-label="Alternar modo claro/escuro">🌓</button>
+        <button id="btn-font-decrease" aria-label="Diminuir fonte">A-</button>
+        <button id="btn-font-increase" aria-label="Aumentar fonte">A+</button>
+        <button id="btn-reset" aria-label="Redefinir preferências">⭯</button>
+      </div>
+      <nav class="menu" aria-label="Menu principal">
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="cultura.html">História</a></li>
+          <li><a href="galeria.html">Galeria</a></li>
+          <li><a href="receitas.html">Receitas</a></li>
+          <li><a href="musica.html">Música</a></li>
+          <li><a href="sobre.html">Sobre</a></li>
+          <li><a href="contato.html">Contato</a></li>
+          <li><a href="comentarios.html">Fórum</a></li>
+          <li><a href="profile.html">Perfil</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main id="main" class="auth-container">
     <h1>Criar Conta</h1>
-    <form id="signupForm">
+    <form id="signupForm" novalidate>
       <label for="name">Nome</label>
-      <input type="text" id="name" required>
+      <input type="text" id="name" required />
+
       <label for="email">E-mail</label>
-      <input type="email" id="email" required>
+      <input type="email" id="email" required />
+
       <label for="password">Senha</label>
-      <input type="password" id="password" required>
+      <input type="password" id="password" required />
+
       <label for="avatar">Avatar (opcional)</label>
-      <input type="file" id="avatar" accept="image/*">
+      <input type="file" id="avatar" accept="image/*" />
+
       <button type="submit">Cadastrar</button>
-      <p>Já tem conta? <a href="login.html">Entrar</a></p>
     </form>
-  </div>
-  <script src="signup.js"></script>
+    <p>Já tem conta? <a href="login.html">Entrar</a></p>
+  </main>
+
+  <footer>
+    <div class="container">
+      <p>&copy; 2025 Festejando, site criado sem fins lucrativos por Jefferson Dias Kreiner.</p>
+    </div>
+  </footer>
+
+  <script src="signup.js" defer></script>
 </body>
 </html>
