--- a/sobre.html
+++ b/sobre.html
@@ -7,10 +7,24 @@
   <link rel="stylesheet" href="stylessobre.css" />
 </head>
 <body>
-  <header>
-    <div class="container">
-      <h1>Festejando: Conectando Pessoas, Compartilhando Ideias</h1>
-      <nav>
+  <a href="#main" class="skip-link">Pular para o conteúdo principal</a>
+
+  <header class="site-header">
+    <div class="container header-inner">
+      <h1 class="logo"><a href="index.html">Festejando</a></h1>
+
+      <div class="accessibility-controls">
+        <button id="btn-contrast" aria-label="Alternar modo claro/escuro">🌓</button>
+        <button id="btn-font-decrease" aria-label="Diminuir fonte">A-</button>
+        <button id="btn-font-increase" aria-label="Aumentar fonte">A+</button>
+        <button id="btn-reset" aria-label="Redefinir preferências">⭯</button>
+      </div>
+
+      <button class="nav-toggle" aria-label="Abrir menu" aria-expanded="false">
+        <span></span><span></span><span></span>
+      </button>
+
+      <nav class="menu" aria-label="Menu principal">
         <ul>
           <li><a href="index.html">Início</a></li>
           <li><a href="cultura.html">História</a></li>
@@ -21,13 +35,12 @@
           <li><a href="contato.html">Contato</a></li>
           <li><a href="comentarios.html">Fórum</a></li>
           <li><a href="profile.html">Perfil</a></li>
-          <li><a href="login.html" id="logoutLink">Logout</a></li>
         </ul>
       </nav>
     </div>
   </header>
 
-  <main class="container">
+  <main id="main" class="container">
     <h2>Sobre “Festejando: do campo à cidade”</h2>
     <section>
       <p>
@@ -55,9 +68,7 @@
     <section>
       <h3>Quem somos</h3>
       <p>
-        Nosso time é formado por entusiastas da cultura popular: historiadores, cozinheiros, fotógrafos e 
-        músicos que se uniram para criar um espaço vibrante e acolhedor. Se você também ama as festas 
-        brasileiras, junte-se a nós!
+        Olá! Eu sou Jefferson, o criador deste site. Aqui, você vai encontrar um espaço dedicado a compartilhar a rica cultura brasileira, promover conversas e interações entre pessoas que valorizam a história e buscam conexões entre as diversas regiões do Brasil.
       </p>
     </section>
   </main>
@@ -68,6 +79,6 @@
     </div>
   </footer>
 
-  <script src="scripts.js"></script>
+  <script src="sobre.js"></script>
 </body>
 </html>
